<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SortingHatActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintTop_toTopOf="parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Which house you would join?"
                    android:textColor="#000000"
                    android:textSize="25dp" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/question_1" />

                    <Spinner
                        android:id="@+id/question_1"
                        style="@style/SpinnerDropDownItem"
                        android:layout_width="180dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:entries="@array/question1_array"
                        android:spinnerMode="dialog" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="50dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/question_2" />

                    <Spinner
                        android:id="@+id/question_2"
                        style="@style/SpinnerDropDownItem"
                        android:layout_width="180dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:entries="@array/question2_array"
                        android:spinnerMode="dialog" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="50dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/question_3" />

                    <Spinner
                        android:id="@+id/question_3"
                        style="@style/SpinnerDropDownItem"
                        android:layout_width="180dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:entries="@array/question3_array"
                        android:spinnerMode="dialog" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="50dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/question_4" />

                    <Spinner
                        android:id="@+id/question_4"
                        style="@style/SpinnerDropDownItem"
                        android:layout_width="180dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:entries="@array/question4_array"
                        android:spinnerMode="dialog" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="50dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/question_5" />

                    <Spinner
                        android:id="@+id/question_5"
                        style="@style/SpinnerDropDownItem"
                        android:layout_width="180dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:entries="@array/question5_array"
                        android:spinnerMode="dialog" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="50dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/question_6" />

                    <Spinner
                        android:id="@+id/question_6"
                        style="@style/SpinnerDropDownItem"
                        android:layout_width="180dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:entries="@array/question6_array"
                        android:spinnerMode="dialog" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="50dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/question_7" />

                    <Spinner
                        android:id="@+id/question_7"
                        style="@style/SpinnerDropDownItem"
                        android:layout_width="180dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:entries="@array/question7_array"
                        android:spinnerMode="dialog" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="50dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/question_8" />

                    <Spinner
                        android:id="@+id/question_8"
                        style="@style/SpinnerDropDownItem"
                        android:layout_width="180dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:entries="@array/question8_array"
                        android:spinnerMode="dialog" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="50dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/question_9" />

                    <Spinner
                        android:id="@+id/question_9"
                        style="@style/SpinnerDropDownItem"
                        android:layout_width="180dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:entries="@array/question9_array"
                        android:spinnerMode="dialog" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="50dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/question_10" />

                    <Spinner
                        android:id="@+id/question_10"
                        style="@style/SpinnerDropDownItem"
                        android:layout_width="180dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:entries="@array/question10_array"
                        android:spinnerMode="dialog" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="50dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/question_11" />

                    <Spinner
                        android:id="@+id/question_11"
                        style="@style/SpinnerDropDownItem"
                        android:layout_width="180dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:entries="@array/question11_array"
                        android:spinnerMode="dialog" />
                </LinearLayout>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="50dp"
                    android:text="Find your House"
                    android:id="@+id/findHouse"/>
            </LinearLayout>
        </ScrollView>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>